--- a/src/components/pay.css
+++ b/src/components/pay.css
@@ -1,13 +1,24 @@
 
-
+body{
+  background: linear-gradient(to left, #414141 0%, #000000 74%);
+}
 /* Exchange Section */
 .exchange-section {
-    background: linear-gradient(to right, #fcefdc, #fdb44b);
+   
+background: linear-gradient(to left, #414141 0%, #000000 74%);
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 20px;
+  }
+
+  @media (max-width: 768px) {
+    .exchange-section {
+          margin-top: 60px;
+    }
+
+
   }
   
   /* Left Side */
@@ -17,9 +28,13 @@
   }
   
   .exchange-left h2 {
+    color: white;
     font-size: 34px;
     font-weight: bold;
     margin-bottom: 20px;
+  }
+  .exchange-left h5{
+    color: white;
   }
   
   .coin-support {
@@ -33,6 +48,7 @@
   }
   
   .payment-text {
+    color: white;
     font-weight: bold;
     margin-top: 20px;
   }
@@ -47,12 +63,20 @@
   }
   
   /* Right Side (Exchange Box) */
+  /* .card-glass {
+  
+  } */
+  
   .exchange-box {
-    background: white;
-    /* width: 40%; */
-    padding: 30px;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+     /* background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px); */
+    background-color: white;
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    padding: 20px;
+    box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.05);
+    color: #ffffff;
   }
   
   .buy-sell-toggle {
@@ -66,12 +90,14 @@
     font-size: 18px;
     font-weight: bold;
     border-radius: 8px;
+   
   }
   
   .rate-text {
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 15px;
+    color: black;
   }
   
   .exchange-form .form-group {
@@ -96,12 +122,12 @@
 
 
   .custom-toggle-button {
-    border: 2px solid #fdb44b !important; 
+    border: 2px solid #D4AF37 !important; 
     border-radius: 8px !important; 
     padding: 10px 20px;
     font-size: 16px;
     font-weight: 500;
-    color: #fdb44b !important;
+    color: #D4AF37 !important;
     background-color: white !important;
     transition: all 0.3s ease-in-out;
   }
@@ -109,9 +135,16 @@
   /* .custom-toggle-button:hover, */
   .custom-toggle-button:focus,
   .custom-toggle-button.active {
-    background-color: #fdb44b !important;
+    background-color: #D4AF37 !important;
     color: white !important;
-    border-color: #fdb44b !important;
+    border-color: #D4AF37 !important;
+  }
+
+  .btn-warning {
+    background-color: #deaf37;
+  }
+  .btn-warning:hover {
+    background-color: #deaf37;
   }
   
 
@@ -172,13 +205,13 @@
 }
 
 .text-primary{
-  color: #f3ac1b !important;
+  color: #D4AF37 !important;
   text-decoration: none !important;
 }
 
 .form-check-input:checked[type=checkbox] {
-  background-color: #f3ac1b;
-  border-color: #f3ac1b;
+  background-color: #D4AF37;
+  border-color: #D4AF37;
 }
 
 
@@ -195,7 +228,7 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background: #f2951d;
+  background: #D4AF37;
   color: #fff;
   font-size: 24px;
   font-weight: bold;
@@ -209,6 +242,7 @@
   margin-top: 15px;
   font-size: 18px;
   font-weight: bold;
+  color: white;
 }
 
 .how-to-exchange-section p {
@@ -221,7 +255,7 @@
 
 .custom-navbar {
   
-  background: linear-gradient(to right, #f2711d, #f3ac1b);
+  background: linear-gradient(to left, #414141 0%, #000000 74%);
   padding: 10px 20px;
   
 }
@@ -272,7 +306,7 @@
 /* Dashboard */
 
 .notification-card {
-  background: rgba(255, 0, 0, 0.1);
+  background: #D4AF37;
   border-radius: 8px;
   padding: 15px;
 }
@@ -296,6 +330,7 @@
   transform: translateY(-20%);
   padding: 20px;
 }
+
 @media (max-width: 576px) {
   .exchange-card {
     transform: translateY(0); 
@@ -323,12 +358,19 @@
 
 /* Background Section */
 .header-section {
-  background: linear-gradient(to right, #f2711d, #f3ac1b);
+  background: linear-gradient(to left, #414141 0%, #000000 74%);
   padding: 20px;
   color: white;
   text-align: left;
   height: 150px;
- 
+}
+@media (max-width: 768px) {
+  .header-section {
+    margin-top: 50px;
+  }
+  .transactions-header {
+    margin-top: 175px !important;
+  }
 }
 
 
@@ -342,17 +384,26 @@
 .notification-card,
 .kyc-card,
 .transaction-card1{
-  background: rgba(255, 0, 0, 0.1);
+  background:  linear-gradient(315deg, #000000 0%, #414141 74%);
   border-radius: 8px;
   padding: 15px;
 }
 
 
+.white{
+  color: black;
+}
+.navbar-toggler-icon{
+  color: #D4AF37;
+  background-color: #D4AF37;
+}
+
 
 
 
 .exchange-btn {
-  background: linear-gradient(to right, #f2711d, #f3ac1b);
+  background: #D4AF37;
+  color: white;
   border: none;
   border-radius: 20px;
   padding: 10px;
@@ -362,33 +413,38 @@
 
 
 .transactions-history {
-  background: #f8f9fa;
+  /* background: #f8f9fa; */
   padding-bottom: 20px;
 }
 
 
 
 .transactions-header {
-  background: linear-gradient(to right, #f2711d, #f3ac1b);
+  background: linear-gradient(to left, #414141 0%, #000000 74%);
   padding: 20px;
   text-align: center;
   color: white;
-  height: 150px;
+  height: 200px;
+  margin-top: 65px; 
 }
+
 
 
 .transactions-tabs {
   margin-top: 20px;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
 
 .transactions-tabs .nav-link {
   font-weight: bold;
-  color: #000;
+  color: white !important;
 }
 
 .transactions-tabs .nav-link.active {
-  border-bottom: 3px solid #f2711d;
-  color: #f2951d;
+  border-bottom: 3px solid #D4AF37 !important;
+  color: #D4AF37 !important;
 }
 
 
@@ -407,7 +463,14 @@
 }
 
 .search-btn {
-  background: linear-gradient(to right, #f2711d, #f3ac1b);
+  background: #D4AF37;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 25px;
+}
+.search-btn:hover{
+  background: #D4AF37;
   border: none;
   color: white;
   padding: 10px 20px;
@@ -416,16 +479,18 @@
 
 .refresh-btn {
   background: white;
-  border: 1px solid #f2711d;
+  border: 1px solid #D4AF37;
+  text-align: center;
+  align-items: center;
   border-radius: 50%;
-  color: #f2711d;
+  color: #D4AF37;
   padding: 10px 15px;
 }
 
 
 .refresh-btn:hover{
-  background: #f2951d;
-  border: 1px solid #f2711d;
+  background: #D4AF37;
+  border: 1px solid #D4AF37;
 }
 
 
@@ -533,13 +598,13 @@
 
 .nav-tabs .nav-link {
   font-weight: bold;
-  color: #333;
+  color: black;
   padding: 10px 15px;
 }
 
 .nav-tabs .nav-link.active {
-  color: #ff9800;
-  border-bottom: 2px solid #ff9800;
+  color: #D4AF37;
+  border-bottom: 2px solid #D4AF37;
 }
 
 .card1 {
@@ -623,8 +688,28 @@
   border-radius: 5px;
 }
 
+
+.personal-info {
+  background: #f8f9fa;
+  padding: 15px;
+  border-radius: 8px;
+  border-left: 5px solid #D4AF37; 
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.personal-info p {
+  margin: 5px 0;
+  font-size: 16px;
+  color: #333;
+}
+
+.personal-info strong {
+  color: #D4AF37; 
+}
+
+
 .increase-btn {
-  background: linear-gradient(90deg, #ff8c00, #ffb700);
+  background: #D4AF37;
   border: none;
   color: white;
   padding: 10px 20px;
@@ -666,7 +751,7 @@
 }
 
 .custom-file-label {
-  background-color: #fde3c9;
+  background-color: #D4AF37;
   color: #333;
   padding: 10px;
   border-radius: 5px;
@@ -913,8 +998,8 @@
 }
 
 .id-tab.active {
-  background: #ffe6c0;
-  border-color: #f3ac1b;
+  background: #D4AF37;
+  border-color: #D4AF37;
 }
 
 .upload-section {
@@ -1013,7 +1098,7 @@
 }
 
 .browse {
-  color: #f3ac1b;
+  color: #D4AF37;
   font-weight: bold;
   cursor: pointer;
 }
@@ -1091,10 +1176,10 @@ body {
 
 /* Active (Selected) Button */
 .toggle-btn.active {
-  background: #fae2bd !important; /* Updated background color */
+  background: #D4AF37 !important; /* Updated background color */
   color: black;
   font-weight: bold;
-  border-bottom: 4px solid #ff9800; /* Orange bottom border */
+  border-bottom: 4px solid #D4AF37; /* Orange bottom border */
 }
 
 /* Button Icon */
@@ -1123,7 +1208,7 @@ body {
 }
 
 .input-group-text {
-  background-color: #f8d49e;
+  background-color: #D4AF37;
   color: white;
   font-weight: bold;
 }
@@ -1155,7 +1240,7 @@ body {
 
 /* Confirmation Button */
 .confirm-btn {
-  background-color: #ff9800;
+  background-color: #D4AF37;
   color: white;
   font-size: 1.2rem;
   font-weight: bold;
@@ -1169,15 +1254,12 @@ body {
   background-color: #e68900;
 }
 
-.btn-grad {
-  background-image: linear-gradient(
-    to right,
-    #ff8008 0%,
-    #ffc837 51%,
-    #ff8008 100%
-  );
+.btn-grad:hover {
+ background-color: #D4AF37;
 }
+
 .btn-grad {
+  background-color: #D4AF37;
   margin: 10px;
   padding: 8px 15px;
   text-align: center;
@@ -1191,6 +1273,12 @@ body {
   border: none;
 }
 
+.hoverr:hover{
+  background-color: transparent;
+}
+
+
+
 .btn-grad:hover {
   background-position: right center; /* change the direction of the change here */
   color: #fff;
@@ -1198,7 +1286,7 @@ body {
 }
 
 .orange-bg{
-  background-color: #f8d49e;
+  background-color: #D4AF37;
   border: none;
   border-radius: 0.5rem;
   margin-top: 1rem;
@@ -1403,7 +1491,7 @@ body {
 }
 
 .link a{
-  color: #f7941d;
+  color: #D4AF37;
 }
 
 
@@ -1421,7 +1509,7 @@ body {
   padding-top: 20px;
   padding-bottom: 20px;
   background: #fff;
-  transform: translateY(-17%)
+  transform: translateY(-15%)
 }
 
 .side-border{
